<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu_act">

    <ViewFlipper
        android:id="@+id/slider"
        android:layout_width="430dp"
        android:layout_height="400dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ViewFlipper>

    <TableLayout
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slider">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="205dp"
                    android:layout_height="100dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/perfil_men" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="64dp"
                    android:text="@string/textView1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/imageButton" />

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="205dp"
                    android:layout_height="100dp"
                    app:layout_constraintStart_toEndOf="@+id/imageButton"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/bd_men" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="64dp"
                    android:text="@string/textView2"
                    app:layout_constraintStart_toEndOf="@+id/imageButton"
                    app:layout_constraintTop_toTopOf="@+id/imageButton2" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/imageButton3"
                    android:layout_width="205dp"
                    android:layout_height="100dp"
                    android:onClick="Maps"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/maps_men" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="64dp"
                    android:text="@string/textView3"
                    app:layout_constraintStart_toStartOf="@+id/imageButton3"
                    app:layout_constraintTop_toTopOf="@+id/imageButton3" />

                <ImageButton
                    android:id="@+id/imageButton4"
                    android:layout_width="205dp"
                    android:layout_height="100dp"
                    android:onClick="info"
                    app:layout_constraintStart_toEndOf="@+id/imageButton3"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/info_men" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="65dp"
                    android:layout_marginLeft="65dp"
                    android:layout_marginTop="64dp"
                    android:text="@string/textView4"
                    app:layout_constraintStart_toEndOf="@+id/imageButton3"
                    app:layout_constraintTop_toTopOf="@+id/imageButton4" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>